# e2ee-sdk

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain.toml
e2ee/: Cargo.toml
e2ee-cli/: Cargo.toml
e2ee-cli/src/: main.rs
e2ee-sdk/: Cargo.toml
e2ee-sdk/src/: lib.rs
e2ee/src/: lib.rs
python/: e2ee_sdk.py  libe2ee_sdk.dylib  test.py
